Fix worker form layout bug

--- a/views/themes/worker/assets/stylesheets/worker/app.scss
+++ b/views/themes/worker/assets/stylesheets/worker/app.scss
@@ -51,7 +51,7 @@
         }
         li{
             list-style: none;
-            &.current{
+            &.current,&.qor-worker-form--show{
                 .qor-worker--new{
                     padding-left: 0;
                     color: rgba(0, 0, 0, 75);
